tests/baselines/reference/asOperator2.errors.txt
tests/cases/conformance/expressions/asOperator/asOperator2.ts(1,9): error TS2352: Type 'number' cannot be converted to type 'string'.


==== tests/cases/conformance/expressions/asOperator/asOperator2.ts (1 errors) ====
    var x = 23 as string;
            ~~~~~~~~~~~~
!!! error TS2352: Type 'number' cannot be converted to type 'string'.
    